tests/reference/asr-test_const_list_clear-33bfae7.stderr
semantic error: cannot clear elements from a const list
 --> tests/errors/test_const_list_clear.py:7:5
  |
7 |     CONST_INTEGER_LIST.clear()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ 
